--- a/css/style.css
+++ b/css/style.css
@@ -274,6 +274,11 @@ img {
     opacity: 1;
 }
 
+.header-bookmarks.active,
+.header-basket.active {
+    background-color: #ee3643;
+}
+
 .header-menu .header-menu__basket {
     padding-left: 49px;
 }
@@ -294,6 +299,16 @@ img {
 
     background-color: #161d29;
 }
+
+.header-bookmarks.active:hover,
+.header-basket.active:hover {
+    background: #ca2c37;
+} 
+
+.header-bookmarks.active:active,
+.header-basket.active:active {
+    background: #ba2732;
+} 
 
 .header-menu .header-menu__btn:hover {
     background-color: #5fbb2d;
@@ -813,6 +828,7 @@ img {
     display: block;
 }
 
+
 .slider-item .slider-item__heading {
     font-size: 36px;
     line-height: 36px;
@@ -1196,8 +1212,9 @@ img {
 .services {
     background-color: #f4f8fa;
 
+    min-height: 524px;
     padding-top: 65px;
-    padding-bottom: 98px;
+    padding-bottom: 80px;
 }
 
 .services .services__heading ,
@@ -1293,7 +1310,7 @@ img {
 }
 
 .services-tab .services-tab__text {
-    max-width: 300px;
+    max-width: 400px;
     margin: 0;
     padding: 0;
     margin-bottom: 26px;
@@ -1343,14 +1360,14 @@ img {
 
 .services-tab:nth-of-type(3)::before {
     content: "";
-    top: 3px;
-    left: 239px;
+    top: 2px;
+    left: 166px;
 
-    width: 389px;
+    width: 469px;
     height: 261px;
 
     position: absolute;
-    background-image: url(../img/guarantee.png);
+    background-image: url(../img/credit.png);
     background-position: 0 0;
     background-repeat: no-repeat;  
 }
@@ -2399,6 +2416,8 @@ img {
 
 /* ===== writeus-popup ===== */
 .writeus-popup {
+    display: none;
+
     position: fixed;
     top: 50%;
     left: 50%;
@@ -2445,17 +2464,16 @@ img {
 
     width: 220px;
     height: 38px;
+    padding: 0 12px;
 }
 
 .writeus-popup .writeus-popup__input::placeholder,
-.writeus-popup .message {
+.writeus-popup .writeus-popup__input {
     font-family: 'PT sans', "Arial", sans-serif;
     font-size: 13px;
     line-height: 18px;
     font-weight: normal;
     color: #b4b4b4;
-    text-indent: 12px;
-    padding-top: 10px;
 }
 
 .writeus-popup .writeus-popup__item:first-child {
@@ -2477,6 +2495,15 @@ img {
 
     width: 460px;
     height: 114px;
+    padding: 10px 12px;
+}
+
+.writeus-popup .writeus-popup__input:hover {
+    border-color: #b5b5b5;
+}
+
+.writeus-popup .writeus-popup__input:focus {
+    border-color: #ee3643;
 }
 
 .bottom-wrap {
@@ -2545,6 +2572,8 @@ img {
 
 /* ===== add-popup ===== */
 .add-popup {
+    display: none;
+
     position: fixed;
     top: 162px;
     left: 50%;
@@ -2642,8 +2671,62 @@ img {
 }
 /* ===== /add-popup ===== */
 
-.writeus-popup,
-.map-popup,
-.add-popup {
+.map-popup {
     display: none; 
 } 
+
+.writeus-show {
+    display: block;
+
+    animation: bounce 0.6s;
+}
+
+.writeus-error {
+    animation: shake 0.6s;
+}
+
+@keyframes bounce {
+    0% {
+      transform: translateY(-2000px);
+    }
+  
+    70% {
+      transform: translateY(30px);
+    }
+  
+    90% {
+      transform: translateY(-10px);
+    }
+  
+    100% {
+      transform: translateY(0);
+    }
+  }
+
+  @keyframes shake {
+    0%,
+    100% {
+      transform: translateX(0);
+    }
+  
+    10%,
+    30%,
+    50%,
+    70%,
+    90% {
+      transform: translateX(-10px);
+    }
+  
+    20%,
+    40%,
+    60%,
+    80% {
+      transform: translateX(10px);
+    }
+  }
+
+  .add-product-show {
+      display: block;
+
+      animation: bounce 0.6s;
+  }
